Hero section: Shifting words animation changed. Loading bug fixed. Humans job description updated.

--- a/app/scss/_default/_loader.scss
+++ b/app/scss/_default/_loader.scss
@@ -23,6 +23,10 @@
 	&.loaded{
 		opacity: 0;
 		z-index: -1;
+
+		img{
+			animation: none;
+		}
 	}
 }
 
